--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   yqfk:
-    image: masterkenway/dgut_yqfk
+    image: ssrinke/yqfk
     environment:
       - USERNAME=
       - PASSWORD=
