--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,12 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
-      - name: Build & Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: masterkenway/dgut_yqfk
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ${{ github.workspace }}/Dockerfile
-          workdir: ${{ github.workspace }}
+        uses: actions/checkout@maste 
+        
