--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@maste 
+            - name: Checkout
+              uses: actions/checkout@maste 
         
+            - name: "Set up Python"
+              uses: actions/setup-python@v1
+              with:
+                python-version: 3.8
+
+            - name: "安装依赖包requests"
+              run: pip install  requests
+            - name: "安装依赖包APScheduler"
+              run: pip install  APScheduler
+
+            - name: "Run yqfk"
+              run: python yqfk.py "${Rinke_yqfk}"
