--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,9 +15,9 @@ jobs:
                 python-version: 3.8
 
             - name: "安装依赖包requests"
-              run: pip3 install  requests
+              run: pip install  requests
             - name: "安装依赖包APScheduler"
-              run: pip3 install  APScheduler
+              run: pip install  APScheduler
 
             - name: "Run yqfk"
               run: python yqfk.py "${Rinke_yqfk}"
