--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,13 +1,18 @@
 name: main
 
-on: [push]
+on:
+    workflow_dispatch:
+    schedule:
+        - cron: "*/60 */2  *  *  *"
+    watch:
+        types: [started]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
             - name: Checkout
-              uses: actions/checkout@master 
+              uses: actions/checkout@v2
         
             - name: "Set up Python"
               uses: actions/setup-python@v1
@@ -15,9 +20,9 @@ jobs:
                 python-version: 3.8
 
             - name: "安装依赖包requests"
-              run: pip install  requests
+              run: pip3 install  requests
             - name: "安装依赖包APScheduler"
-              run: pip install  APScheduler
+              run: pip3 install  APScheduler
 
             - name: "Run yqfk"
-              run: python yqfk.py secrets.RINKE_YQFK
+              run: python3 yqfk.py secrets.RINKE_YQFK
