--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,4 +23,6 @@ jobs:
               run: pip3 install -r requirements.txt
 
             - name: "Run yqfk"
-              run: python yqfk.py ${{ secrets.RINKE_YQFK }}
+              run: 
+                USERINFO='${{ secrets.RINKE_YQFK }}'
+                python yqfk.py "${USERINFO}"
