--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,12 @@
-name: main
+name: DGUT_yqfk
 
-on: [push]
+on:
+    workflow_dispatch:
+    schedule:
+        - cron: "10 0,1,2,3  *  *  *"
+    watch:
+        types: [started]
+
 
 jobs:
   build:
