--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: DGUT_yqfk
 on:
     workflow_dispatch:
     schedule:
-        - cron: "10 0,1,2,3  *  *  *"
+        - cron: "10 */2  *  *  *"
     watch:
         types: [started]
 
